<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/menu_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/menu_contacts"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/menu_location"
        android:icon="@drawable/ic_location"
        android:title="@string/menu_location"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>
        
</menu> 